[package]
name = "reed"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus-core = "0.6.3"
dioxus-core-macro = "0.6.3"
dioxus-hooks = "0.6.2"
dioxus-signals = "0.6.3"
emacs = "0.19.0"
scoped-tls = "1.0.1"
serde-lexpr = "0.1.3"
serde_json = "1.0.140"
taffy = { version = "0.8.1", features = ["serde"] }
textwrap = "0.16.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[lib]
crate-type = ["cdylib"]

[features]
tracing = []

